--- a/src/app.css
+++ b/src/app.css
@@ -15,3 +15,17 @@
 	text-underline-offset: 0.2em;
 	min-width: 0;
 }
+
+body {
+	position: relative;
+}
+
+body::before {
+	content: '';
+	position: absolute;
+	inset: 0;
+	background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100"%3E%3Cdefs%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="3" stitchTiles="stitch"/%3E%3CfeColorMatrix type="saturate" values="0"/%3E%3C/filter%3E%3C/defs%3E%3Crect width="100%" height="100%" filter="url(%23noiseFilter)"/%3E%3C/svg%3E');
+	opacity: 0.15;
+	pointer-events: none;
+	z-index: -1;
+}
