--- a/src/app.css
+++ b/src/app.css
@@ -22,7 +22,7 @@ body {
 
 body::before {
 	content: '';
-	position: absolute;
+	position: fixed;
 	inset: 0;
 	background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100"%3E%3Cdefs%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="3" stitchTiles="stitch"/%3E%3CfeColorMatrix type="saturate" values="0"/%3E%3C/filter%3E%3C/defs%3E%3Crect width="100%" height="100%" filter="url(%23noiseFilter)"/%3E%3C/svg%3E');
 	opacity: 0.15;
@@ -56,7 +56,14 @@ body::before {
 	0% {
 		box-shadow: 0 0 10px 2px #4a6283;
 	}
+
 	100% {
 		box-shadow: 0 0 20px 2px #253141;
 	}
+}
+
+dialog.backdrop::backdrop {
+	background-color: rgba(0, 0, 0, 0.2);
+	backdrop-filter: blur(2px);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
